# modtext

./: .gitignore  Cargo.toml  DESIGN.mt  README.mt  build.rs
flatbuffers/: storage.fbs
modtext/: Cargo.toml
modtext/src/: main.rs  parser.rs
schema/: Cargo.toml  build.rs
schema/src/: lib.rs
