[package]
name = "modtext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "=24.3.25"
# serde_derive = "1.0"
# serde = "1.0"

[build-dependencies]
flatbuffers-build = "0.2.0" # +flatc-24.3.25
